--- a/Crypt/Crypt.csproj
+++ b/Crypt/Crypt.csproj
@@ -50,6 +50,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Models\Encryption.cs" />
+    <Compile Include="Models\Hash.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
