--- a/Crypt/packages.config
+++ b/Crypt/packages.config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="Costura.Fody" version="3.3.2" targetFramework="net461" />
-  <package id="Fody" version="3.3.5" targetFramework="net461" developmentDependency="true" />
+  <package id="Microsoft.jQuery.Unobtrusive.Validation" version="3.2.3" targetFramework="net461" />
+  <package id="Microsoft.Owin.Host.SystemWeb" version="3.0.1" targetFramework="net461" />
+  <package id="TwoFactor" version="1.0.0.1" targetFramework="net461" />
 </packages>
