--- a/Crypt/packages.config
+++ b/Crypt/packages.config
@@ -1,5 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="EASendMail" version="7.3.0.6" targetFramework="net461" />
+  <package id="email" version="1.1.1" targetFramework="net461" />
   <package id="Microsoft.jQuery.Unobtrusive.Validation" version="3.2.3" targetFramework="net461" />
   <package id="Microsoft.Owin.Host.SystemWeb" version="3.0.1" targetFramework="net461" />
   <package id="TwoFactor" version="1.0.0.1" targetFramework="net461" />
