--- a/Crypt/packages.config
+++ b/Crypt/packages.config
@@ -1,8 +1,9 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="Base32" version="1.0.0.26" targetFramework="net461" />
+  <package id="Costura.Fody" version="1.6.2" targetFramework="net461" developmentDependency="true" />
   <package id="EASendMail" version="7.3.0.6" targetFramework="net461" />
-  <package id="email" version="1.1.1" targetFramework="net461" />
-  <package id="Microsoft.jQuery.Unobtrusive.Validation" version="3.2.3" targetFramework="net461" />
-  <package id="Microsoft.Owin.Host.SystemWeb" version="3.0.1" targetFramework="net461" />
-  <package id="TwoFactor" version="1.0.0.1" targetFramework="net461" />
+  <package id="Fody" version="2.5.0" targetFramework="net461" developmentDependency="true" />
+  <package id="OtpSharp" version="1.3.0.4" targetFramework="net461" />
+  <package id="QRCoder" version="1.2.2" targetFramework="net461" />
 </packages>
