--- a/Crypt/packages.config
+++ b/Crypt/packages.config
@@ -4,6 +4,7 @@
   <package id="Costura.Fody" version="1.6.2" targetFramework="net461" developmentDependency="true" />
   <package id="EASendMail" version="7.3.0.6" targetFramework="net461" />
   <package id="Fody" version="2.5.0" targetFramework="net461" developmentDependency="true" />
+  <package id="Newtonsoft.Json" version="8.0.3" targetFramework="net461" />
   <package id="OtpSharp" version="1.3.0.4" targetFramework="net461" />
   <package id="QRCoder" version="1.2.2" targetFramework="net461" />
 </packages>
